[workspace]
members = [
  "crates/jstz_core",
  "crates/jstz_api",
  "crates/jstz_proto",
  "crates/jstz_crypto",
  "crates/jstz_kernel",
  "crates/jstz_cli",
  "crates/jstz_node",
  "crates/jstz_wpt",
  "crates/ole",
]


[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["TriliTech <contact@trili.tech>"]
repository = "https://github.com/trilitech/jstz"

[workspace.dependencies]
jstz_core = { path = "crates/jstz_core" }
jstz_api = { path = "crates/jstz_api" }
jstz_kernel = { path = "crates/jstz_kernel" }
jstz_proto = { path = "crates/jstz_proto" }
jstz_crypto = { path = "crates/jstz_crypto" }
jstz_node = { path = "crates/jstz_node" }
jstz_cli = { path = "crates/jstz_cli" }
jstz_wpt = { path = "crates/jstz_wpt" }

[workspace.dependencies.tezos-smart-rollup]
path = "../tezos/src/kernel_sdk/sdk"
default-features = false
features = [
  "std",
  "crypto",
  "panic-hook",
  "data-encoding",
  "storage",
  "proto-alpha",
]

[workspace.dependencies.tezos-smart-rollup-host]
path = "../tezos/src/kernel_sdk/host"
features = ["proto-alpha"]

[workspace.dependencies.tezos-smart-rollup-core]
path = "../tezos/src/kernel_sdk/core"

[workspace.dependencies.tezos-smart-rollup-mock]
path = "../tezos/src/kernel_sdk/mock"

[workspace.dependencies.tezos-smart-rollup-encoding]
path = "../tezos/src/kernel_sdk/encoding"

[workspace.dependencies.tezos-smart-rollup-entrypoint]
path = "../tezos/src/kernel_sdk/entrypoint"

[workspace.dependencies.tezos-smart-rollup-debug]
path = "../tezos/src/kernel_sdk/debug"

[workspace.dependencies.tezos-smart-rollup-panic-hook]
path = "../tezos/src/kernel_sdk/panic-hook"

[workspace.dependencies.tezos-smart-rollup-storage]
path = "../tezos/src/kernel_sdk/storage"

[workspace.dependencies.tezos-smart-rollup-installer-config]
path = "../tezos/src/kernel_sdk/installer-config"

[patch.crates-io]
boa_ast = { git = "https://github.com/trilitech/boa.git", branch = "ajob410@create-realm-with-default-globals" }
boa_engine = { git = "https://github.com/trilitech/boa.git", branch = "ajob410@create-realm-with-default-globals" }
boa_gc = { git = "https://github.com/trilitech/boa.git", branch = "ajob410@create-realm-with-default-globals" }
boa_interner = { git = "https://github.com/trilitech/boa.git", branch = "ajob410@create-realm-with-default-globals" }
boa_macros = { git = "https://github.com/trilitech/boa.git", branch = "ajob410@create-realm-with-default-globals" }
boa_parser = { git = "https://github.com/trilitech/boa.git", branch = "ajob410@create-realm-with-default-globals" }
boa_profiler = { git = "https://github.com/trilitech/boa.git", branch = "ajob410@create-realm-with-default-globals" }
